remove unuse dependancies

--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,15 @@
 NODE_ENV=development
 
+# ETH
 INFURA_PROJECT=
 INFURA_API_KEY=
 INFURA_URL=https://mainnet.infura.io/v3
 INFURA_WS_URL=wss://mainnet.infura.io/ws/v3
 
-ETH_BLOCK_TIME=30
+ERC20_CONTRACT_ADDRESS=0xdAC17F958D2ee523a2206206994597C13D831ec7
 
-TOKEN_CONTRACT_ADDRESS=0xdAC17F958D2ee523a2206206994597C13D831ec7
+#TRON
+TRONSCAN_API=https://apilist.tronscanapi.com/api/transaction-info
+TRONSCAN_API_KEY=
 
-WALLET_FROM=0x88a7063D83cc6a46636D7Ce8f64b05C5105A02B3
-WALLET_TO=0xdAC17F958D2ee523a2206206994597C13D831ec7
-AMOUNT=5000
+TRC20_CONTRACT_ADDRESS=TR7NHqjeKQxGTCi8q8ZY4pL8otSzgjLj6t
