--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "api": "^6.0.0",
+    "axios": "^1.4.0",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.3.1",
-    "tronweb": "^5.2.0",
     "web3": "^4.0.2"
   }
 }
